--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -8,11 +8,95 @@
         android:minSdkVersion="10"
         android:targetSdkVersion="19" />
 
+    
+    
+    <!-- MobiSensLibrary - START -->
+   	<uses-permission android:name="android.permission.VIBRATE"/>
+    
+    <uses-permission android:name="android.permission.INTERNET" /> 
+	<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" /> <!-- FOR PARSE -->
+    
+    <uses-permission android:name="android.permission.READ_PHONE_STATE"/> <!-- DEVICE ID -->
+    
+    <uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    
+	<uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION"/>
+	
+	<uses-permission android:name="android.permission.GET_ACCOUNTS" />
+	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+	 
+	<!--
+	  IMPORTANT: Change "com.parse.tutorials.pushnotifications.permission.C2D_MESSAGE" in the lines below
+	  to match your app's package name + ".permission.C2D_MESSAGE".
+	-->
+	<permission android:protectionLevel="signature"
+	    android:name="edu.cmu.sv.mobisens.client.permission.C2D_MESSAGE" />
+	<uses-permission android:name="edu.cmu.sv.mobisens.client.permission.C2D_MESSAGE" />
+    <!-- MobiSensLibrary - END -->
+    
+    
+    
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme" android:name="edu.cmu.sv.mobisens.library.managers.MobiSensLibraryApplication">
+        
+        
+        
+        <!-- MobiSensLibrary - START -->
+        <meta-data
+		   android:name="com.google.android.gms.version"
+		   android:value="4452000" />
+
+        
+        <service android:name="com.parse.PushService" />
+			<receiver android:name="com.parse.ParseBroadcastReceiver">
+			  <intent-filter>
+			    <action android:name="android.intent.action.BOOT_COMPLETED" />
+			    <action android:name="android.intent.action.USER_PRESENT" />
+			  </intent-filter>
+			</receiver>
+			<receiver android:name="com.parse.GcmBroadcastReceiver"
+			    android:permission="com.google.android.c2dm.permission.SEND">
+			  <intent-filter>
+			    <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+			    <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
+			 
+			    <!--
+			      IMPORTANT: Change "com.parse.tutorials.pushnotifications" to match your app's package name.
+			    -->
+			    <category android:name="edu.cmu.sv.mobisens.client" />
+			  </intent-filter>
+			</receiver>
+        
+			
+		<receiver android:name="edu.cmu.sv.mobisens.library.managers.PushNotificationHandler" android:exported="false">
+		  <intent-filter>
+		    <action android:name="edu.cmu.sv.mobisens.library.PUSH_NOTIFICATION" />
+		  </intent-filter>
+		</receiver>
+		
+		<receiver android:name="edu.cmu.sv.mobisens.library.managers.OnBootHandler">  
+		    <intent-filter>  
+		        <action android:name="android.intent.action.BOOT_COMPLETED" />  
+		    </intent-filter>  
+		</receiver>
+		
+		
+		<receiver android:name="edu.cmu.sv.mobisens.library.sensing.SensingManager"></receiver>
+        <service android:name="edu.cmu.sv.mobisens.library.sensing.activity.ActivityRecognitionIntentService"></service>
+        
+		
+        <!-- MobiSensLibrary - END -->
+        
+        
+        
         <activity
             android:name="edu.cmu.sv.mobisens.client.example.MainActivity"
             android:label="@string/app_name" >
