--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,7 @@
 
     <uses-sdk
         android:minSdkVersion="10"
-        android:targetSdkVersion="19" />
+        android:targetSdkVersion="10" />
 
     
     
@@ -45,7 +45,7 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" android:name="edu.cmu.sv.mobisens.library.managers.MobiSensLibraryApplication">
+        android:name="edu.cmu.sv.mobisens.library.managers.MobiSensLibraryApplication">
         
         
         
