--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -31,12 +31,10 @@
 	<uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 	 
 	<!--
-	  IMPORTANT: Change "com.parse.tutorials.pushnotifications.permission.C2D_MESSAGE" in the lines below
-	  to match your app's package name + ".permission.C2D_MESSAGE".
+	  IMPORTANT: Change "edu.cmu.sv.mobisens.client" in the lines below to match your app's package name
 	-->
-	<permission android:protectionLevel="signature"
-	    android:name="edu.cmu.sv.mobisens.client.permission.C2D_MESSAGE" />
-	<uses-permission android:name="edu.cmu.sv.mobisens.client.permission.C2D_MESSAGE" />
+	<permission android:protectionLevel="signature" android:name="edu.cmu.sv.mobisens.client.example.permission.C2D_MESSAGE" />
+	<uses-permission android:name="edu.cmu.sv.mobisens.client.example.permission.C2D_MESSAGE" />
     <!-- MobiSensLibrary - END -->
     
     
@@ -45,7 +43,8 @@
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:name="edu.cmu.sv.mobisens.library.managers.MobiSensLibraryApplication">
+        
+        android:name="edu.cmu.sv.mobisens.library.managers.MobiSensLibraryApplication"> <!-- MobiSensLibrary - ADD THIS LINE -->
         
         
         
@@ -69,9 +68,9 @@
 			    <action android:name="com.google.android.c2dm.intent.REGISTRATION" />
 			 
 			    <!--
-			      IMPORTANT: Change "com.parse.tutorials.pushnotifications" to match your app's package name.
+			      IMPORTANT: Change "edu.cmu.sv.mobisens.client" to match your app's package name.
 			    -->
-			    <category android:name="edu.cmu.sv.mobisens.client" />
+			    <category android:name="edu.cmu.sv.mobisens.client.example" />
 			  </intent-filter>
 			</receiver>
         
@@ -99,7 +98,10 @@
         
         <activity
             android:name="edu.cmu.sv.mobisens.client.example.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name" 
+            android:configChanges="keyboardHidden|orientation">
+		    
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
