transform the inheritance from MobiSensLibraryApplication to a simple function call

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,7 +50,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         
-        android:name="edu.cmu.sv.mobisens.library.managers.MobiSensLibraryApplication"> <!-- MobiSensLibrary - ADD THIS LINE -->
+        android:name="edu.cmu.sv.mobisens.client.example.MobiSensClientExampleApplication"> 
         
         
         
