--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -55,9 +55,8 @@
         
         
         <!-- MobiSensLibrary - START -->
-        <meta-data
-		   android:name="com.google.android.gms.version"
-		   android:value="4452000" />
+        <meta-data android:name="com.google.android.gms.version"
+        	android:value="@integer/google_play_services_version" />
 
         
         <service android:name="com.parse.PushService" />
